--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "styled-components": "^6.1.11",
