--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "clsx": "^2.1.1",
     "jest-dom": "^4.0.0",
     "lucide-react": "^0.383.0",
-    "next": "14.2.3",
+    "next": "^14.2.4",
     "next-redux-wrapper": "^8.1.0",
     "pusher-js": "^8.4.0-rc2",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
